# KrowTUI

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: TODO.yml  bug_report.md  bug_report.yml  discussion.yml  task.md
.github/workflows/: build.yml  check-docs.yml  format.yml  lint.yml  test.yml
docs/: api_reference.md  examples.md  getting_started.md  points.md  references.md  samples.md
docs/api_docs/: app.md  block.md  colour.md  keyevent.md  layout.md  list.md  objects.md  rect.md  text.md  textfield.md
docs/changelog/: 0.3.0  1.1.0  1.2.0
docs/dev/: file_dependency.md
docs/references/: events.md
docs/references/events/: keyevent.md
docs/references/layout/: rect.md
docs/references/object/: block.md  list.md  textfield.md
docs/references/style/: style.md
docs/references/text/: text.md
docs/sample/: colour_palette.md  counter.md
include/K10-K10/: krow.h  terminal.h
include/K10-K10/app/: app.h
include/K10-K10/core/: drawObj.h  render.h  screen.h
include/K10-K10/debug/: logger.h
include/K10-K10/input/: cursor.h  keyboard.h
include/K10-K10/layout/: border.h  rect.h
include/K10-K10/line/: line.h  text.h
include/K10-K10/style/: alignment.h  border.h  color.h  style.h  text_style.h
include/K10-K10/utils/: base.h  string_helper.h  support.h
src/K10-K10/app/: app.cc
src/K10-K10/core/: drawObj.cc  render.cc  screen.cc
src/K10-K10/input/: cursor.cc  keyboard.cc
src/K10-K10/line/: line.cc  text.cc
src/K10-K10/style/: alignment.cc  color.cc  style.cc
src/K10-K10/utils/: base.cc  string_helper.cc
src/app/: app.cc  app.h
src/core/: drawObj.cc  drawObj.h  render.cc  screen.cc  screen.h
src/feat/: feature.cc
src/input/: cursor.cc  keyboard.cc
src/style/: color.h
src/utils/: base.cc
test/: CMakeLists.txt  logger.cpp  modules.cpp  style.cpp
